--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "vite build",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
